Speaker and dashboard done

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Home
-description: Welcome to Your Site.
+title: AI for Clinicians
+description: Building effective and responsible AI use in clinical practice.
 ---
    
 <style>        
@@ -328,12 +328,12 @@ description: Welcome to Your Site.
             <p class="link-description">Industry standards, best practices, and regulatory frameworks for AI in healthcare</p>
         </a>
 
-        <a href="https://speaker.aiforclin.com/" 
+        <a href="/services" 
         class="link-button" 
         target="_blank" 
         rel="noopener noreferrer"
-        aria-label="AI Consultant & Speaker - Professional consulting and speaking services">
-            <h2 class="link-title">AI Consultant &amp; Speaker</h2>
+        aria-label="AI Consultant and Speaker - Professional consulting and speaking services">
+            <h2 class="link-title">AI Consultant and Speaker</h2>
             <p class="link-description">Professional consulting services, speaking engagements, and expert guidance for AI adoption</p>
         </a>
     </div>
