--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ description: Building effective and responsible AI use in clinical practice.
     <div class="links-container">
     <div><a href="https://speaker.aiforclin.com/#pricing" target="_blank" rel="noopener noreferrer" aria-label="Book a Consultation" class="book-now">Book Now</a></div>
     <div class="section-border">
-        <a href="https://comparisons.aiforclin.com/" 
+        <a href="/comparisons/" 
         class="link-button" 
         target="_blank" 
         rel="noopener noreferrer"
@@ -310,7 +310,7 @@ description: Building effective and responsible AI use in clinical practice.
             <p class="link-description">Compare features, pricing, and capabilities of leading AI scribe solutions for clinical documentation</p>
         </a>
 
-        <a href="https://compliance.aiforclin.com/" 
+        <a href="/compliance/" 
         class="link-button" 
         target="_blank" 
         rel="noopener noreferrer"
@@ -319,7 +319,7 @@ description: Building effective and responsible AI use in clinical practice.
             <p class="link-description">Essential compliance resources, templates, and guidelines for responsible AI implementation</p>
         </a>
 
-        <a href="https://standards.aiforclin.com/" 
+        <a href="/standards/" 
         class="link-button" 
         target="_blank" 
         rel="noopener noreferrer"
@@ -328,7 +328,7 @@ description: Building effective and responsible AI use in clinical practice.
             <p class="link-description">Industry standards, best practices, and regulatory frameworks for AI in healthcare</p>
         </a>
 
-        <a href="/services" 
+        <a href="/services/" 
         class="link-button" 
         target="_blank" 
         rel="noopener noreferrer"
