--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ description: Building effective and responsible AI use in clinical practice.
         max-width: 600px;
     }
 
-    .header {
+    .dashboard-header {
         text-align: center;
-        margin-bottom: 3.75rem;
+        margin: 4rem 0;
     }
 
     .main-title {
@@ -293,14 +293,13 @@ description: Building effective and responsible AI use in clinical practice.
 </style>
 
 <div class="container">
-    <div class="header">
+    <header class="dashboard-header">
         <h1 class="main-title">AI FOR CLINICIANS</h1>
         <p class="subtitle">Professional Resources Hub</p>
         <p class="tagline">Building effective and responsible AI use in clinical practice</p>
-    </div>
-    <div class="links-container">
-    <div><a href="https://speaker.aiforclin.com/#pricing" target="_blank" rel="noopener noreferrer" aria-label="Book a Consultation" class="book-now">Book Now</a></div>
-    <div class="section-border">
+    </header>
+    <div style="text-align: center;"><a href="https://speaker.aiforclin.com/#pricing" target="_blank" rel="noopener noreferrer" aria-label="Book a Consultation" class="book-now">Book Now</a></div>
+    <section class="section-border">
         <a href="/comparisons/" 
         class="link-button" 
         target="_blank" 
@@ -336,21 +335,20 @@ description: Building effective and responsible AI use in clinical practice.
             <h2 class="link-title">AI Consultant and Speaker</h2>
             <p class="link-description">Professional consulting services, speaking engagements, and expert guidance for AI adoption</p>
         </a>
-    </div>
-    <div class="section-border">
+    </section>
+    <section class="section-border">
         <div class="footer-content">
             <address class="contact-info">
                 <p>Contact: <a href="mailto:david@psychologysquared.com.au" class="contact-link">david@psychologysquared.com.au</a></p>
                 <p>Professional AI consulting and training services</p>
             </address>
-            
-            <nav class="social-links" aria-label="Social media links">
-                <a href="https://www.linkedin.com/in/davidlopis/" class="social-link" aria-label="Visit our LinkedIn page">LinkedIn</a>
-                <!-- <a href="#" class="social-link" aria-label="Follow us on Twitter">Twitter</a>
-                <a href="#" class="social-link" aria-label="Subscribe to our newsletter">Newsletter</a> -->
-            </nav>
-        </div>
-    </div>
+        
+        <nav class="social-links" aria-label="Social media links">
+            <a href="https://www.linkedin.com/in/davidlopis/" class="social-link" aria-label="Visit our LinkedIn page">LinkedIn</a>
+            <!-- <a href="#" class="social-link" aria-label="Follow us on Twitter">Twitter</a>
+            <a href="#" class="social-link" aria-label="Subscribe to our newsletter">Newsletter</a> -->
+        </nav>
+    </section>
 </div>
 
 <script>
