--- a/services/index.html
+++ b/services/index.html
@@ -140,7 +140,7 @@ description: Professional consulting services, speaking engagements, and expert 
         max-width: 800px;
         margin-left: auto;
         margin-right: auto;
-        text-align: center;
+        /* text-align: center; */
     }
 
     .section-text.muted {
