--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -192,7 +192,7 @@ description: Compare AI scribe companies and find the best fit for your therapy 
 </style>
   
 
-<header class="title-container">
+<header class="title-container-alt">
     <div class="container">
         <h1 class="main-title">AI Scribe Company <span style="text-decoration: underline;">Comparisons</span></h1>
         <p class="main-subtitle">Compare AI scribe companies and find the best fit for your therapy and clinical documentation needs.</p>
