--- a/services/index.html
+++ b/services/index.html
@@ -5,120 +5,6 @@ description: Professional consulting services, speaking engagements, and expert 
 ---
     
 <style>        
-    /* Hero Section */
-    .hero {
-        flex-direction: row;
-        margin: 22vh auto;
-    }
-
-    .hero-content {
-        width: 50%;
-    }
-
-    .hero-text {
-        text-align: center;
-    }
-
-    .hero-cta {
-        display: inline-block;
-        background: var(--card-bg);
-        border: 2px solid var(--border-color);
-        border-radius: 0.5rem;
-        padding: 1.5rem 2rem;
-        color: var(--primary-gold);
-        text-decoration: none;
-        font-weight: 700;
-        font-size: 1.1rem;
-        transition: var(--transition);
-        position: relative;
-        overflow: hidden;
-    }
-
-    .hero-cta::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(212, 175, 55, 0.1), transparent);
-        transition: left 0.5s ease;
-    }
-
-    .hero-cta:hover::before,
-    .hero-cta:focus::before {
-        left: 100%;
-    }
-
-    .hero-cta:hover,
-    .hero-cta:focus {
-        background: var(--hover-bg);
-        border-color: var(--primary-gold);
-        transform: translateY(-2px);
-        box-shadow: 0 8px 25px rgba(212, 175, 55, 0.15);
-        outline: none;
-    }
-
-    .hero-image {
-        display: flex;
-        justify-content: center;
-    }
-
-    .hero-img {
-        width: 280px;
-        height: 280px;
-        border-radius: 1rem;
-        object-fit: cover;
-        border: 2px solid var(--border-color);
-        box-shadow: 0 8px 25px rgba(212, 175, 55, 0.15);
-    }
-
-    /* Section Styles */
-    .section {
-        padding: 4rem 0;
-    }
-
-    .section-alt {
-        background: var(--card-bg);
-    }
-
-    .section-title {
-        font-size: clamp(2rem, 4vw, 3rem);
-        font-weight: 700;
-        text-align: center;
-        margin-bottom: 1rem;
-        color: var(--text-secondary);
-        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
-        letter-spacing: 0.05em;
-    }
-
-    .section-title-accent {
-        color: var(--primary-gold);
-    }
-
-    .section-subtitle {
-        font-size: 1.25rem;
-        color: var(--text-secondary);
-        text-align: center;
-        margin-bottom: 3rem;
-        font-style: italic;
-    }
-
-    .section-text {
-        font-size: 1.1rem;
-        color: var(--text-secondary);
-        line-height: 1.7;
-        margin-bottom: 1.5rem;
-        max-width: 800px;
-        margin-left: auto;
-        margin-right: auto;
-        /* text-align: center; */
-    }
-
-    .section-text.muted {
-        color: var(--text-muted);
-    }
-
     /* Card Styles */
     .cards-grid {
         display: grid;
@@ -589,9 +475,9 @@ description: Professional consulting services, speaking engagements, and expert 
 </style>
 
 <!-- Hero Section -->
-<header id="home" class="title-container container hero">
-    <div class="hero-content">
-        <div class="hero-text">
+<header id="home" class="title-container container">
+    <div class="title-content">
+        <div class="title-text">
             <h1 class="main-title">
                 AI FOR<br />
                 <span class="main-title-accent">CLINICIANS</span>
