--- a/index.html
+++ b/index.html
@@ -3,273 +3,8 @@ layout: default
 title: AI for Clinicians
 description: Building effective and responsible AI use in clinical practice.
 ---
-   
-<style>        
-    .container {
-        max-width: 600px;
-    }
-    
-    .tagline {
-        font-size: 1rem;
-        color: var(--text-muted);
-        font-style: italic;
-    }
 
-    .logo-icon {
-        filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));
-        transition: var(--transition);
-    }
-
-    .logo-icon:hover {
-        filter: drop-shadow(0 4px 8px rgba(212, 175, 55, 0.4));
-        transform: scale(1.05);
-    }
-
-    .links-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .link-button {
-        display: block;
-        text-decoration: none;
-        background: rgba(212, 175, 55, 0.08);
-        border: 2px solid var(--border-color);
-        border-radius: 0.5rem;
-        padding: 1.5rem 2rem;
-        transition: var(--transition);
-        position: relative;
-        overflow: hidden;
-    }
-
-    .link-button::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: -100%;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(212, 175, 55, 0.1), transparent);
-        transition: left 0.5s ease;
-        pointer-events: none;
-    }
-
-    .link-button:hover::before,
-    .link-button:focus::before {
-        left: 100%;
-    }
-
-    .link-button:hover,
-    .link-button:focus {
-        background: var(--hover-bg);
-        border-color: var(--primary-gold);
-        transform: translateY(-2px);
-        box-shadow: 0 8px 25px rgba(212, 175, 55, 0.15);
-        outline: none;
-    }
-
-    .link-button:focus {
-        outline: 2px solid var(--primary-gold);
-        outline-offset: 2px;
-    }
-
-    .link-title {
-        font-size: 1.4rem;
-        font-weight: 700;
-        color: var(--primary-gold);
-        margin-bottom: 0.5rem;
-        position: relative;
-        z-index: 1;
-        letter-spacing: 0.025em;
-    }
-
-    .link-description {
-        font-size: 1rem;
-        color: var(--text-secondary);
-        position: relative;
-        z-index: 1;
-        line-height: 1.5;
-    }
-
-    .section-border {
-        border-top: 1px solid var(--border-color);
-        padding-top: 2.5rem;
-        margin-top: 2.5rem;
-        display: flex;
-        flex-direction: column;
-        gap: 1.25rem;
-    }
-
-    .footer-content {
-        display: flex;
-        flex-direction: column;
-        gap: 1.25rem;
-        align-items: center;
-        text-align: center;
-    }
-
-    .contact-info {
-        font-size: 0.9rem;
-        color: var(--text-muted);
-    }
-
-    .contact-link {
-        color: var(--primary-gold);
-        text-decoration: none;
-        transition: var(--transition);
-    }
-
-    .contact-link:hover,
-    .contact-link:focus {
-        text-decoration: underline;
-        color: var(--gold-light);
-        outline: 1px solid var(--primary-gold);
-        outline-offset: 2px;
-    }
-
-    .book-now {
-        border: 2px solid var(--primary-gold);
-        border-radius: 0.5rem;
-        font-weight: 600;
-        transition: var(--transition);
-        cursor: pointer;
-        text-decoration: none;
-        font-size: 0.9rem;
-        padding: 0.8rem 1.6rem;
-        background: var(--primary-gold);
-        color: var(--navy-deepest);
-    }
-
-    .book-now:hover,
-    .book-now:focus {
-        background: rgba(212, 175, 55, 0.1);
-        border-color: var(--primary-gold);
-        color: var(--primary-gold);
-        outline: none;
-    }
-
-    .social-links {
-        display: flex;
-        gap: 1.25rem;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .social-link {
-        color: var(--primary-gold);
-        text-decoration: none;
-        font-size: 0.9rem;
-        padding: 0.5rem 1rem;
-        border: 1px solid var(--border-color);
-        border-radius: 0.3rem;
-        transition: var(--transition);
-    }
-
-    .social-link:hover,
-    .social-link:focus {
-        background: rgba(212, 175, 55, 0.1);
-        border-color: var(--primary-gold);
-        color: var(--gold-light);
-        outline: none;
-    }
-
-    .copyright {
-        font-size: 0.8rem;
-        color: var(--text-muted);
-    }
-
-    .logo-icon-svg {
-        color: var(--primary-gold);
-    }
-
-    @keyframes fadeInUp {
-        from {
-            opacity: 0;
-            transform: translateY(20px);
-        }
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-
-    @keyframes ripple {
-        to {
-            transform: scale(4);
-            opacity: 0;
-        }
-    }
-
-    .fade-in {
-        animation: fadeInUp 0.6s ease forwards;
-    }
-
-    @media (max-width: 768px) {
-        .container {
-            padding: 1.875rem 0.9375rem;
-        }
-
-        .subtitle {
-            font-size: 1.1rem;
-        }
-
-        .link-button {
-            padding: 1.25rem 1.5rem;
-        }
-
-        .link-title {
-            font-size: 1.2rem;
-        }
-
-        .link-description {
-            font-size: 0.9rem;
-        }
-
-        .footer-content {
-            gap: 0.9375rem;
-        }
-
-        .social-links {
-            gap: 0.9375rem;
-        }
-    }
-
-    @media (max-width: 480px) {
-        .subtitle {
-            font-size: 1rem;
-        }
-
-        .link-button {
-            padding: 1.125rem 1.25rem;
-        }
-
-        .social-links {
-            flex-direction: column;
-            align-items: center;
-            gap: 0.625rem;
-        }
-    }
-
-    @media (prefers-reduced-motion: reduce) {
-        *,
-        *::before,
-        *::after {
-            animation-duration: 0.01ms !important;
-            animation-iteration-count: 1 !important;
-            transition-duration: 0.01ms !important;
-            scroll-behavior: auto !important;
-        }
-    }
-
-    @media (prefers-contrast: high) {
-        .link-button {
-            border-width: 3px;
-        }
-    }
-</style>
-
-<div class="container">
+<div class="dashboard-container">
     <header class="dashboard-header">
         <h1 class="main-title">AI FOR CLINICIANS</h1>
         <p class="main-subtitle">Professional Resources Hub</p>
