done - now to just refactor styling and scripts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: AI for Clinicians
 description: Building effective and responsible AI use in clinical practice.
 ---
 
-<div class="dashboard-container">
+<div class="dashboard-container container">
     <header class="dashboard-header">
         <h1 class="main-title">AI FOR CLINICIANS</h1>
         <p class="main-subtitle">Professional Resources Hub</p>
