--- a/services/index.html
+++ b/services/index.html
@@ -2,8 +2,16 @@
 layout: default
 title: AI Consultant and Speaker
 description: Professional consulting services, speaking engagements, and expert guidance for AI adoption.
+subnav:
+  - label: Home
+    href: "#home"
+  - label: About
+    href: "#about"
+  - label: Services
+    href: "#services"
+  - label: Pricing
+    href: "#pricing"
 ---
-    
 
 <!-- Hero Section -->
 <header id="home" class="title-container container">
