before styling refactoring

--- a/compliance/index.html
+++ b/compliance/index.html
@@ -2,6 +2,17 @@
 layout: default
 title: AI Compliance Pack
 description: Essential AI compliance materials for Australian psychologists.
+subnav:
+  - label: Home
+    href: "#home"
+  - label: About
+    href: "#about"
+  - label: Contents
+    href: "#contents"
+  - label: Pricing
+    href: "#pricing"
+  - label: Legal
+    href: "#legal"
 ---
 
 <!-- Hero Section -->
@@ -132,7 +143,7 @@ description: Essential AI compliance materials for Australian psychologists.
 </section>
 
 <!-- Legal Disclaimers -->
-<section class="section">
+<section id="legal" class="section">
     <div class="container">
         <h2 class="section-title">Important Legal Information</h2>
         <div class="legal-content">
