--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: Building effective and responsible AI use in clinical practice.
         <p class="main-subtitle">Professional Resources Hub</p>
         <p class="tagline">Building effective and responsible AI use in clinical practice</p>
     </header>
-    <div style="text-align: center;"><a href="https://speaker.aiforclin.com/#pricing" target="_blank" rel="noopener noreferrer" aria-label="Book a Consultation" class="book-now">Book Now</a></div>
+    <div style="text-align: center;"><a href="/contact/" target="_blank" rel="noopener noreferrer" aria-label="Book a Consultation" class="book-now">Book Now</a></div>
     <section class="section-border">
         <a href="/services/" 
         class="link-button" 
