--- a/services/index.html
+++ b/services/index.html
@@ -12,20 +12,22 @@ subnav:
   - label: Pricing
     href: "#pricing"
 ---
-<header id="home" class="title-container container">
-    <div class="title-content">
-        <h1 class="main-title main-title-accent">
-            AI FOR<br />
-            <span class="main-title">CLINICIANS</span>
-        </h1>
-        <p class="main-subtitle">Building effective and responsible AI use</p>
-        <a href="#contact" class="hero-cta" onclick="scrollToSection('contact')">
-            GET IN TOUCH<br />
-            <small class="hero-cta-subtitle">Transform Your Practice</small>
-        </a>
-    </div>
-    <div class="hero-image">
-        <img src="../assets/images/professionalHeadshot.png" alt="David Lopis - AI Consultant" class="hero-img" />
+<header id="home" class="title-container">
+    <div class="container container-alt">
+        <div class="title-content">
+            <h1 class="main-title main-title-accent">
+                AI FOR<br />
+                <span class="main-title">CLINICIANS</span>
+            </h1>
+            <p class="main-subtitle">Building effective and responsible AI use</p>
+            <a href="#contact" class="hero-cta" onclick="scrollToSection('contact')">
+                GET IN TOUCH<br />
+                <small class="hero-cta-subtitle">Transform Your Practice</small>
+            </a>
+        </div>
+        <div class="hero-image">
+            <img src="../assets/images/professionalHeadshot.png" alt="David Lopis - AI Consultant" class="hero-img" />
+        </div>
     </div>
 </header>
     <!-- About Section -->
