--- a/services/index.html
+++ b/services/index.html
@@ -298,7 +298,7 @@ subnav:
                 
                 <div class="center">
                     <button class="btn btn-primary" onclick="openBookingForm('consulting', 'general')">
-                        Schedule Consultation
+                        Book Consultation
                     </button>
                 </div>
             </article>
@@ -362,7 +362,7 @@ subnav:
                         Prior discussion required to ensure suitability
                     </p>
                     <button class="btn w-100" onclick="openBookingForm('company', 'ongoing-assistance')">
-                        Request Ongoing Assistance
+                        Book Ongoing Assistance
                     </button>
                 </div>
             </div>
