Dashboard UI uplift

--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -25,7 +25,7 @@ description: Compare AI scribe companies and find the best fit for your therapy 
     </section>
 
     <section class="section company-links container" aria-labelledby="company-details">
-        <h2 id="company-details">AI Scribe Company Details</h2>
+        <h2 id="company-details" class="section-title-alt">AI Scribe Company Details</h2>
         <div class="company-grid" role="list">
         <article class="company-card" role="listitem">
             <h3>AllyScribe</h3>
