--- a/compliance/index.html
+++ b/compliance/index.html
@@ -47,7 +47,7 @@ subnav:
         </h2>
         <div class="about-content">
             <div class="about-text">
-                <h3 class="content-info-header">Now immediately available upon purchase</h3>
+                <h3 class="content-info-header-alt">Now immediately available upon purchase</h3>
                 <p class="section-text">
                     The <strong>AI Compliance Pack</strong> is part of your AI compliance essentials for psychologists who currently use or are planning to implement AI in their practices. It serves as a cost-effective alternative to independently developing compliance materials. This purchase item for a single purchaser for their own access <strong>only</strong>
                 </p>
@@ -87,27 +87,27 @@ subnav:
         <div class="contents-grid">
             <div class="content-item">
                 <div class="content-icon">📄</div>
-                <h3 class="content-info-header">AI Policy Template</h3>
+                <h3 class="content-info-header-alt">AI Policy Template</h3>
                 <p class="section-text">drafted by PGC Legal Pty Ltd</p>
             </div>
             <div class="content-item">
                 <div class="content-icon">🔒</div>
-                <h3 class="content-info-header">Privacy Policy Template</h3>
+                <h3 class="content-info-header-alt">Privacy Policy Template</h3>
                 <p class="section-text">drafted by PGC Legal Pty Ltd</p>
             </div>
             <div class="content-item">
                 <div class="content-icon">✅</div>
-                <h3 class="content-info-header">Consent Form for AI use</h3>
+                <h3 class="content-info-header-alt">Consent Form for AI use</h3>
                 <p class="section-text">drafted by PGC Legal Pty Ltd</p>
             </div>
             <div class="content-item">
                 <div class="content-icon">📋</div>
-                <h3 class="content-info-header">AI Implementation Checklist</h3>
+                <h3 class="content-info-header-alt">AI Implementation Checklist</h3>
                 <p class="section-text">drafted by PGC Legal Pty Ltd</p>
             </div>
             <div class="content-item">
                 <div class="content-icon">📝</div>
-                <h3 class="content-info-header">Session Transcript Recommendation</h3>
+                <h3 class="content-info-header-alt">Session Transcript Recommendation</h3>
                 <p class="section-text">Guidance on inclusion of session transcript/audio file in clinical notes drafted by PGC Legal Pty Ltd</p>
             </div>
         </div>
@@ -147,7 +147,7 @@ subnav:
         <h2 class="section-title">Important Legal Information</h2>
         <div class="content-container">
             <div class="content-section">
-                <h3 class="content-info-header">Information is Not Legal Advice</h3>
+                <h3>Information is Not Legal Advice</h3>
                 <p class="content-section-text">
                     The above information, content and template documents (together <strong>'the content'</strong>) are the intellectual property of PGC Legal Pty Ltd and the provision of them by Psychology Squared does not constitute legal advice, and is provided for information only.
                 </p>
