--- a/standards/index.html
+++ b/standards/index.html
@@ -59,7 +59,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
     <div class="content-container">
       
       <article class="content-section" id="accountability">
-        <h3 class="content-info-header">1. Accountability</h3>
+        <h3>1. Accountability</h3>
         <p class="content-section-text">
           Responsibility is taken by the user for any decisions made based on, or as a result of an AI-generated product.
         </p>
