Commented out contact card on dashboard

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@ description: Building effective and responsible AI use in clinical practice.
             <h2 class="link-title">AI Consultant and Speaker</h2>
             <p class="link-description">Professional consulting services, speaking engagements, and expert guidance for AI adoption</p>
         </a>
+
+        <!-- <a href="/contact/" 
+        class="link-button" 
+        target="_blank" 
+        rel="noopener noreferrer"
+        aria-label="Contact - Get in touch for bookings and availability">
+            <h2 class="link-title">Contact</h2>
+            <p class="link-description">Get in touch for bookings and availability</p>
+        </a> -->
     </section>
 
     <section class="section-border" aria-labelledby="resources-heading">
