Contact form submissions

--- a/services/index.html
+++ b/services/index.html
@@ -474,8 +474,9 @@ subnav:
                 </div>
                 <nav class="form-navigation">
                     <button type="button" class="btn btn-secondary" onclick="prevStep()">← Previous</button>
-                    <button type="button" class="btn" onclick="submitForm()">Submit Request</button>
+                    <button type="button" class="btn" onclick="submitForm('bookingPage')">Submit Request</button>
                 </nav>
+                <p id="email-status" class="email-status"></p>
             </fieldset>
         </form>
     </div>
