Turnstile working, removed js from main.js

--- a/contact/index.html
+++ b/contact/index.html
@@ -70,7 +70,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
             
             <div class="card">
                 <!-- <h3 class="card-title" style="margin-bottom: 1.5rem;">Send a Message</h3> -->
-                <form id="contact-form">
+                <form id="form">
                     <div class="form-group">
                         <label class="form-label">Name</label>
                         <input id="name" type="text" name="name" required class="form-input" placeholder="Your full name" />
@@ -87,7 +87,8 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
                         <label class="form-label">Message</label>
                         <textarea id="message" name="message" required class="form-textarea" placeholder="Tell us about your AI integration needs..."></textarea>
                     </div>
-                    <button type="button" class="btn btn-primary" style="width: 100%;" onclick="submitForm('contactPage')">Send Message</button>
+                    <div id="cf-turnstile"></div>
+                    <button id="submit-btn" type="button" class="btn btn-primary" style="width: 100%;" onclick="submitFormContact()">Send Message</button>
                     <p id="email-status" class="email-status"></p>
                 </form>
             </div>
