--- a/services/index.html
+++ b/services/index.html
@@ -472,6 +472,7 @@ subnav:
                     <label for="additional-info">Additional Information</label>
                     <textarea id="additional-info" rows="4" placeholder="Any additional details about your requirements, audience, or special considerations"></textarea>
                 </div>
+                <input type="text" name="website" id="website" class="hp-field" autocomplete="off" tabindex="-1">
                 <div id="cf-turnstile"></div>
                 <nav class="form-navigation">
                     <button type="button" class="btn btn-secondary" onclick="prevStep()">← Previous</button>
