--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@ description: Building effective and responsible AI use in clinical practice.
             <h2 class="link-title">AI Standards</h2>
             <p class="link-description">Industry standards, best practices, and regulatory frameworks for AI in healthcare</p>
         </a>
+
+        <a href="/faq/" 
+        class="link-button" 
+        target="_blank" 
+        rel="noopener noreferrer"
+        aria-label="Frequently Asked Questions - Answers to common questions about AI for clinicians">
+            <h2 class="link-title">Frequently Asked Questions</h2>
+            <p class="link-description">Answers to common questions about AI for clinicians</p>
+        </a>
     </section>
     
     <section class="section-border">
