--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@ description: Building effective and responsible AI use in clinical practice.
 ---
 
 <div class="dashboard-container container">
-    <header class="dashboard-header">
-        <h1 class="main-title">AI FOR CLINICIANS</h1>
-        <p class="main-subtitle dashboard-subtitle">Building effective and responsible AI use in clinical practice</p>
-    </header>
+    <div style="display: flex; justify-content: center; align-items: center; gap: 4rem;">       
+        <header class="dashboard-header">
+            <h1 class="main-title">AI FOR CLINICIANS</h1>
+            <p class="main-subtitle dashboard-subtitle">Building effective and responsible AI use in clinical practice</p>
+        </header>
+        <img
+            src="{{ '/assets/images/logo2.png' | relative_url }}"
+        alt="AI for Clinicians logo"
+
+        width="240"
+        height="240"
+        decoding="async"
+        loading="lazy"
+    /></div>
+
     <div style="text-align: center;"><a href="/services/#pricing" target="_blank" rel="noopener noreferrer" aria-label="Book a Consultation" class="book-now">Book Now</a></div>
     <section class="section-border">
         <a href="/services/" 
