UI Updates - speaker page icons

--- a/comparisons/index.html
+++ b/comparisons/index.html
@@ -5,9 +5,11 @@ description: Compare AI scribe companies and find the best fit for your therapy 
 ---
 
     <div class="container">
-    <header class="title-container-alt container">
-        <h1 class="main-title">AI Scribe Company <span style="text-decoration: underline;">Comparisons</span></h1>
-        <p class="main-subtitle">Compare AI scribe companies and find the best fit for your therapy and clinical documentation needs.</p>
+    <header class="title-container">
+        <div class=" title-content-centered">
+            <h1 class="main-title">AI Scribe Company <span style="text-decoration: underline;">Comparisons</span></h1>
+            <p class="main-subtitle">Compare AI scribe companies and find the best fit for your therapy and clinical documentation needs.</p>
+        </div>
     </header>   
 
     <section class="section table-section">
