--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
 ---
 
 
-<header class="title-container-alt container">
+<header class="title-container">
     <div class="title-content-centered">
         <h1 class="main-title main-title-accent">
             Get In <span class="main-title">Touch</span>
@@ -57,7 +57,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
                     </div>
                 </div>
                 
-                <h4 class="card-title" style="margin-bottom: 1rem;">Follow Our Work</h4>
+                <h4 class="card-title" style="margin-bottom: 1rem; text-align: left;">Follow Our Work</h4>
                 <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                     <button class="btn" onclick="window.open('https://www.linkedin.com/in/davidlopis/', '_blank')">
                         <span style="margin-right: 0.5rem;">in</span> LinkedIn
