--- a/standards/index.html
+++ b/standards/index.html
@@ -4,7 +4,7 @@ title: AI Ethical Standards
 description: AI Ethical Standards for Australian Psychology professionals and trainees. Guidelines for responsible AI use by Psychology Squared Pty Ltd.
 ---
     <!-- Header -->
-    <header class="title-container-alt">
+    <header class="title-container">
       <div class="title-content title-content-centered">
         <h1 class="main-title">AI Ethical Standards</h1>
         <button class="btn" aria-label="Download PDF version" onclick="downloadPDF()">
@@ -28,7 +28,7 @@ description: AI Ethical Standards for Australian Psychology professionals and tr
     <!-- Table of Contents -->
     <nav class="card mb-8 container" aria-label="Standards navigation">
       <header class="card-header">
-        <h2 class="card-title text-lg">Table of Contents</h2>
+        <h2 class="card-title text-lg" style="text-align: left;">Table of Contents</h2>
       </header>
       <div class="card-content">
         <div class="toc-grid">
