UI updates, CSS refactoring

--- a/contact/index.html
+++ b/contact/index.html
@@ -89,7 +89,7 @@ description: Get in touch with AI for Clinicians for speaking engagements, AI co
                     </div>
                     <input type="text" name="website" id="website" class="hp-field" autocomplete="off" tabindex="-1">
                     <div id="cf-turnstile"></div>
-                    <button id="submit-btn" type="button" class="btn btn-primary" style="width: 100%;" onclick="submitFormContact()">Send Message</button>
+                    <button id="submit-btn" type="button" class="btn w-100" onclick="submitFormContact()">Send Message</button>
                     <p id="email-status" class="email-status"></p>
                 </form>
             </div>
